added: backend/config.py added: frontend/index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,6 +132,7 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <!-- Scripts -->
+    <script src="js/config.js"></script>
     <script src="js/upload.js"></script>
     <script src="js/status.js"></script>
 </body>
