--- a/frontend/preview.html
+++ b/frontend/preview.html
@@ -98,6 +98,7 @@
     <div class="toast-container" id="toastContainer"></div>
 
     <!-- Scripts -->
+    <script src="js/config.js"></script>
     <script src="js/preview.js"></script>
     <script src="js/download.js"></script>
 </body>
