git add -A git commit -m "feat: Major UI Update v2.0.0
- Added logo to header on index and preview pages
- Enhanced drag & drop area for PC and mobile
- Improved UI with professional gradients and animations
- Added floating background particles effect
- Added correct answer highlighting in green with badge
- Better mobile responsive design with larger touch targets

Version: 1.x.x → 2.0.0"

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,9 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
+            <div class="logo-container">
+                <img src="logo.png" alt="MCQ Extractor AI Logo" class="site-logo">
+            </div>
             <h1>MCQ Extractor AI</h1>
             <p>Extract MCQs from your PDF documents instantly using AI</p>
         </header>
