--- a/frontend/preview.html
+++ b/frontend/preview.html
@@ -11,6 +11,9 @@
     <div class="container">
         <!-- Header -->
         <header class="header">
+            <div class="logo-container">
+                <img src="logo.png" alt="MCQ Extractor AI Logo" class="site-logo">
+            </div>
             <h1>MCQ Preview</h1>
             <p>Review your extracted multiple choice questions</p>
         </header>
